--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
@@ -18,8 +19,6 @@
 # misc
 .DS_Store
 *.pem
-
-.env
 
 # debug
 npm-debug.log*
