--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-   "bcryptjs": "^2.4.3",
+    "@netlify/plugin-nextjs": "^5.8.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "mongoose": "6.11.1",
